# BizIGen

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
database/: schema.sql
db/: custom.db
mini-services/api-service/: index.ts  pyproject.toml  requirements.txt
mini-services/api-service/app/: __init__.py  config.py  database.py  main.py  schemas.py
mini-services/api-service/app/models/: __init__.py  models.py
mini-services/api-service/app/routers/: __init__.py  admin.py  auth.py  chat.py  export.py  generate.py  password_reset.py  projects.py  subscriptions.py
mini-services/api-service/app/services/: __init__.py  ai_service.py  export_service.py  payment_service.py
mini-services/api-service/app/utils/: __init__.py
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/app/(admin)/admin/: layout.tsx  page.tsx
src/app/(auth)/forgot-password/: page.tsx
src/app/(auth)/login/: page.tsx
src/app/(dashboard)/: layout.tsx
src/app/api/export/: route.ts
src/app/dashboard/: page.tsx
src/app/support/: page.tsx
src/components/: providers.tsx
src/components/canvas/: business-model-canvas-sortable.tsx  business-model-canvas.tsx  business-plan-viewer.tsx  lean-canvas.tsx
src/components/chat/: chat-input.tsx  chat-message.tsx  suggestions.tsx
src/components/dashboard/: dashboard-stats.tsx
src/components/templates/: template-selector.tsx
src/lib/: auth-config.ts  constants.ts  export-pdf.ts  fastapi-client.ts  rebuild.ts  templates.ts  types.ts
src/types/: index.ts
tests/: basic.spec.ts
(+42 files in other folders)
